--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -11,6 +11,7 @@ add_example(flat_forest)
 add_example(function_ref)
 add_example(generator)
 add_example(indices)
+add_example(outcome)
 add_example(partial)
 add_example(scope)
 add_example(string_utils)
