--- a/cmake/cluConfig.cmake.in
+++ b/cmake/cluConfig.cmake.in
@@ -1,4 +1,4 @@
 @PACKAGE_INIT@
 
-include("${CMAKE_INSTALL_PREFIX}/lib/cmake/clu/cluTargets.cmake")
+include("${CMAKE_CURRENT_LIST_DIR}/cluTargets.cmake")
 check_required_components("@PROJECT_NAME@")
