Ver 0.6: when_all_ready, vector_utils, and more

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -6,6 +6,7 @@ function (add_example TARGET_NAME)
     target_link_libraries(${TARGET_NAME} PRIVATE clu)
 endfunction ()
 
+add_example(coroutine)
 add_example(enumerate)
 add_example(flat_forest)
 add_example(function_ref)
