--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -12,6 +12,7 @@ add_example(flat_forest)
 add_example(function_ref)
 add_example(generator)
 add_example(indices)
+add_example(meta)
 add_example(outcome)
 add_example(partial)
 add_example(scope)
