Lots of meta-programming things

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -14,6 +14,7 @@ function (add_test_exe TARGET_NAME)
     add_test(AllTestsInMain ${TARGET_NAME})
 endfunction ()
 
+add_test_exe(meta_algorithm)
 add_test_exe(polymorphic_value)
 add_test_exe(static_vector)
 add_test_exe(take)
