Wide integer (WIP)

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -18,3 +18,4 @@ add_test_exe(meta_algorithm)
 add_test_exe(polymorphic_value)
 add_test_exe(static_vector)
 add_test_exe(take)
+add_test_exe(wider_integer)
