--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -14,9 +14,18 @@ function (add_test_exe TARGET_NAME)
     add_test(AllTestsInMain ${TARGET_NAME})
 endfunction ()
 
-add_test_exe(forest)
-add_test_exe(meta_algorithm)
-add_test_exe(polymorphic_value)
-add_test_exe(static_vector)
-add_test_exe(take)
-add_test_exe(wide_integer)
+add_executable(tests
+    "flags.cpp"
+    "forest.cpp"
+    "meta_algorithm.cpp"
+    "polymorphic_value.cpp"
+    "static_vector.cpp"
+    "take.cpp"
+    "wide_integer.cpp"
+)
+target_set_options(tests)
+target_link_libraries(tests PRIVATE
+    clu
+    GTest::gmock_main
+)
+add_test(AllTestsInMain tests)
