--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,16 +4,6 @@ enable_testing()
 
 find_package(GTest CONFIG REQUIRED)
 
-function (add_test_exe TARGET_NAME)
-    add_executable(${TARGET_NAME} "${TARGET_NAME}.cpp")
-    target_set_options(${TARGET_NAME})
-    target_link_libraries(${TARGET_NAME} PRIVATE
-        clu
-        GTest::gmock_main
-    )
-    add_test(AllTestsInMain ${TARGET_NAME})
-endfunction ()
-
 add_executable(tests
     "flags.cpp"
     "forest.cpp"
@@ -23,9 +13,9 @@ add_executable(tests
     "take.cpp"
     "wide_integer.cpp"
 )
-target_set_options(tests)
 target_link_libraries(tests PRIVATE
     clu
+    project_options
     GTest::gmock_main
 )
 add_test(AllTestsInMain tests)
