Pipeable and monadic interface for optional

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,12 +8,15 @@ add_executable(tests
     "flags.cpp"
     "forest.cpp"
     "function_ref.cpp"
+    "functional.cpp"
     # "generator.cpp"
     "indices.cpp"
     "meta_algorithm.cpp"
+    "pipeable.cpp"
     "polymorphic_value.cpp"
     "scope.cpp"
     "static_vector.cpp"
+    "string_utils.cpp"
     "take.cpp"
     "wide_integer.cpp"
 )
