--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -4,6 +4,7 @@ function (add_example TGT)
     add_executable(${TGT} "${TGT}.cpp")
     target_set_output_dirs(${TGT})
     target_link_libraries(${TGT} PRIVATE project_options clu::clu)
+    target_compile_options(${TGT} PRIVATE cxx_std_20)
 endfunction ()
 
 add_example(all_headers)
@@ -15,7 +16,6 @@ add_example(generator)
 add_example(indices)
 add_example(meta)
 add_example(outcome)
-add_example(partial)
 add_example(scope)
 add_example(string_utils)
 add_example(type_erasure)
