--- a/docs/Doxyfile.in
+++ b/docs/Doxyfile.in
@@ -6,3 +6,4 @@ GENERATE_XML = YES
 WARN_IF_UNDOCUMENTED = NO
 ALIASES = "rst=\verbatim embed:rst:leading-asterisk"
 ALIASES += "endrst=\endverbatim"
+ALIASES += "inlrst=\verbatim embed:rst:inline"
