--- a/cmake/cluConfig.cmake.in
+++ b/cmake/cluConfig.cmake.in
@@ -1,4 +1,7 @@
 @PACKAGE_INIT@
 
+include(CMakeFindDependencyMacro)
+find_dependency(Threads)
+
 include("${CMAKE_CURRENT_LIST_DIR}/cluTargets.cmake")
 check_required_components("@PROJECT_NAME@")
