Not header only now, and also cleaning...

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,15 +1,114 @@
-add_library(clu INTERFACE)
+add_library(clu)
 add_library(clu::clu ALIAS clu)
 
-target_include_directories(clu
-INTERFACE
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>
+set_target_properties(clu PROPERTIES LINKER_LANGUAGE CXX)
+target_set_output_dirs(clu)
+
+function (add_headers TGT)
+    set(headers ${ARGN})
+    list(TRANSFORM headers PREPEND "include/clu/")
+    set(${TGT} ${headers} PARENT_SCOPE)
+endfunction ()
+function (add_sources TGT)
+    set(sources ${ARGN})
+    list(TRANSFORM sources PREPEND "src/")
+    set(${TGT} ${sources} PARENT_SCOPE)
+endfunction ()
+
+add_headers(HEADERS
+    # Header files here (relative to ./include/clu/)
+    "async/async_manual_reset_event.h"
+
+    "execution/algorithms.h"
+    "execution/any_scheduler.h"
+    "execution/awaitable_traits.h"
+    "execution/execution_traits.h"
+    "execution/run_loop.h"
+    "execution/utility.h"
+
+    "any_unique.h"
+    "assertion.h"
+    "async.h"
+    "buffer.h"
+    "c_str_view.h"
+    "chrono_utils.h"
+    "concepts.h"
+    "concurrency.h"
+    "copy_elider.h"
+    "coroutine.h"
+    "execution.h"
+    "execution_contexts.h"
+    "expected.h"
+    "export.h"
+    "file.h"
+    "fixed_string.h"
+    "flags.h"
+    "forest.h"
+    "function_ref.h"
+    "function_traits.h"
+    "generator.h"
+    "hash.h"
+    "indices.h"
+    "integer_literals.h"
+    "invocable_wrapper.h"
+    "iterator.h"
+    "macros.h"
+    "manual_lifetime.h"
+    "meta_algorithm.h"
+    "meta_list.h"
+    "new.h"
+    "oneway_task.h"
+    "optional_ref.h"
+    "overload.h"
+    "parse.h"
+    "piper.h"
+    "polymorphic_value.h"
+    "polymorphic_visit.h"
+    "random.h"
+    "scope.h"
+    "semver.h"
+    "static_for.h"
+    "static_vector.h"
+    "stop_token.h"
+    "string_utils.h"
+    "tag_invoke.h"
+    "take.h"
+    "task.h"
+    "type_traits.h"
+    "unique_coroutine_handle.h"
+    "uuid.h"
+    "vector_utils.h"
 )
+add_sources(SOURCES
+    # Source files here (relative to ./src/)
+    "concurrency.cpp"
+    "file.cpp"
+    "random.cpp"
+    "semver.cpp"
+    "stop_token.cpp"
+    "uuid.cpp"
+)
+
+target_sources(clu PRIVATE ${HEADERS} ${SOURCES})
+target_set_options(clu PRIVATE)
+target_set_warnings(clu PRIVATE)
+target_set_cxx_std(clu)
+
+if (BUILD_SHARED_LIBS)
+    target_compile_definitions(clu
+        PRIVATE CLU_EXPORT_SHARED
+        PUBLIC CLU_BUILD_SHARED)
+endif ()
 
 set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads)
-target_link_libraries(clu INTERFACE Threads::Threads)
+
+target_include_directories(clu
+PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
+)
+target_link_libraries(clu PUBLIC Threads::Threads)
 
 if (ENABLE_INSTALL)
     include(CMakePackageConfigHelpers)
