--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 # Chlorie's utilities library
 
-cmake_minimum_required(VERSION 3.14)
+cmake_minimum_required(VERSION 3.20)
 
 project(clu LANGUAGES CXX VERSION 0.32.0)
 
@@ -9,10 +9,10 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SCRIPTS})
 
 add_library(project_options INTERFACE)
 include("cmake/ProjectSettings.cmake")
-target_compile_features(project_options INTERFACE cxx_std_20)
 target_set_warnings(project_options INTERFACE)
 target_set_options(project_options INTERFACE)
 
+option(BUILD_SHARED_LIBS "Build library as shared library" OFF)
 option(ENABLE_INSTALL "Enable to install the project" ON)
 
 add_subdirectory(lib)
