--- a/docs/Doxyfile.in
+++ b/docs/Doxyfile.in
@@ -7,3 +7,7 @@ WARN_IF_UNDOCUMENTED = NO
 ALIASES = "rst=\verbatim embed:rst:leading-asterisk"
 ALIASES += "endrst=\endverbatim"
 ALIASES += "inlrst=\verbatim embed:rst:inline"
+ENABLE_PREPROCESSING = YES
+MACRO_EXPANSION = YES
+EXPAND_ONLY_PREDEF = YES
+PREDEFINED = CLU_API=
