Added URI class

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -22,7 +22,7 @@ add_executable(tests
     "static_vector.cpp"
     "string_utils.cpp"
     "tag_invoke.cpp"
-    "take.cpp"
+    "uri.cpp"
     "uuid.cpp"
     "wide_integer.cpp"
 
