time_scheduler concepts and new_thread_scheduler

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -90,6 +90,7 @@ add_headers(HEADERS
     "execution/algorithms/scheduling.h"
 
     "execution_contexts/threads.h"
+    "execution_contexts/timed_threads.h"
 )
 add_sources(SOURCES
     # Source files here (relative to ./src/)
