--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -144,33 +144,31 @@ PUBLIC
 )
 target_link_libraries(clu PUBLIC Threads::Threads)
 
-if (ENABLE_INSTALL)
-    include(CMakePackageConfigHelpers)
-    write_basic_package_version_file(
-        "${PROJECT_BINARY_DIR}/cluConfigVersion.cmake"
-        VERSION ${PACKAGE_VERSION}
-        COMPATIBILITY SameMajorVersion
-    )
+include(CMakePackageConfigHelpers)
+write_basic_package_version_file(
+    "${PROJECT_BINARY_DIR}/cluConfigVersion.cmake"
+    VERSION ${PACKAGE_VERSION}
+    COMPATIBILITY SameMajorVersion
+)
 
-    install(TARGETS clu
-        EXPORT cluTargets
-        LIBRARY DESTINATION lib
-        ARCHIVE DESTINATION lib
-        RUNTIME DESTINATION bin
-        PUBLIC_HEADER DESTINATION include
-    )
+install(TARGETS clu
+    EXPORT cluTargets
+    LIBRARY DESTINATION lib
+    ARCHIVE DESTINATION lib
+    RUNTIME DESTINATION bin
+    PUBLIC_HEADER DESTINATION include
+)
 
-    include(CMakePackageConfigHelpers)
-    configure_package_config_file(
-        "${PROJECT_SOURCE_DIR}/cmake/cluConfig.cmake.in"
-        "${PROJECT_BINARY_DIR}/cluConfig.cmake"
-        INSTALL_DESTINATION lib/cmake/clu
-    )
+include(CMakePackageConfigHelpers)
+configure_package_config_file(
+    "${PROJECT_SOURCE_DIR}/cmake/cluConfig.cmake.in"
+    "${PROJECT_BINARY_DIR}/cluConfig.cmake"
+    INSTALL_DESTINATION lib/cmake/clu
+)
 
-    export(TARGETS clu NAMESPACE clu:: FILE cluConfig.cmake)
-    install(EXPORT cluTargets NAMESPACE clu:: DESTINATION lib/cmake/clu)
-    install(FILES "${PROJECT_BINARY_DIR}/cluConfigVersion.cmake"
-                  "${PROJECT_BINARY_DIR}/cluConfig.cmake"
-            DESTINATION lib/cmake/clu)
-    install(DIRECTORY ${PROJECT_SOURCE_DIR}/lib/include/ DESTINATION include)
-endif ()
+export(TARGETS clu NAMESPACE clu:: FILE cluConfig.cmake)
+install(EXPORT cluTargets NAMESPACE clu:: DESTINATION lib/cmake/clu)
+install(FILES "${PROJECT_BINARY_DIR}/cluConfigVersion.cmake"
+                "${PROJECT_BINARY_DIR}/cluConfig.cmake"
+        DESTINATION lib/cmake/clu)
+install(DIRECTORY "${PROJECT_SOURCE_DIR}/lib/include/" DESTINATION "include")
