Intrusive list and ordered hash set (-> 0.38)
Now clu doesn't provide std::format facilities when there's no stdlib support for it. As a result, gcc and clang without __cpp_lib_format now builds fine. Closes #9.

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -45,6 +45,7 @@ add_headers(HEADERS
     "hash.h"
     "indices.h"
     "integer_literals.h"
+    "intrusive_list.h"
     "invocable_wrapper.h"
     "iterator.h"
     "macros.h"
@@ -54,6 +55,7 @@ add_headers(HEADERS
     "new.h"
     "oneway_task.h"
     "optional_ref.h"
+    "ordered_hash_set.h"
     "overload.h"
     "parse.h"
     "piper.h"
