Updated S&R implementation to meet P2300R7 specs.

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -61,6 +61,7 @@ add_headers(HEADERS
     "piper.h"
     "polymorphic_value.h"
     "polymorphic_visit.h"
+    "query.h"
     "random.h"
     "scope.h"
     "semver.h"
